<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_red">Red</string>
    <string name="button_yellow">Yellow</string>
    <string name="button_green">Green</string>
    <string name="howToplay">How To Play</string>
    <string name="tapsTheBoxesAndButtons">Taps the boxes And Buttons</string>
    <string name="redButton">red</string>
    <string name="yellowButton">yellow</string>
    <string name="greenButton">green</string>
</resources>