<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/boxOneText"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margin_wide"
        android:layout_marginEnd="@dimen/margin_wide"
        android:text="@string/box_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/boxTwoText"
        style="@style/WhiteBox"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/box_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxOneText" />

    <TextView
        android:id="@+id/boxThreeText"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/box_three"
        app:layout_constraintBottom_toTopOf="@+id/boxFourTex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
        app:layout_constraintTop_toTopOf="@+id/boxTwoText" />

    <TextView
        android:id="@+id/boxFourTex"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/box_four"
        app:layout_constraintBottom_toTopOf="@+id/boxFiveText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
        app:layout_constraintTop_toBottomOf="@+id/boxThreeText" />

    <TextView
        android:id="@+id/boxFiveText"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/box_five"
        app:layout_constraintBottom_toBottomOf="@+id/boxTwoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/boxTwoText"
        app:layout_constraintTop_toBottomOf="@+id/boxFourTex" />

    <TextView
        android:id="@+id/labelText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/howToplay"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/infoText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/tapsTheBoxesAndButtons"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/labelText"
        app:layout_constraintTop_toBottomOf="@+id/boxFiveText"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/redButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/redButton"
        app:backgroundTint="@color/myRed"
        app:layout_constraintBaseline_toBaselineOf="@+id/yellowButton"
        app:layout_constraintEnd_toStartOf="@+id/yellowButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/yellowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/yellowButton"
        app:backgroundTint="@color/myYellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/greenButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/redButton"
        app:layout_constraintTop_toBottomOf="@+id/infoText"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/greenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/greenButton"
        app:backgroundTint="@color/myGreen"
        app:layout_constraintBaseline_toBaselineOf="@+id/yellowButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yellowButton" />

</androidx.constraintlayout.widget.ConstraintLayout>